# utl-sphinx-theme

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: publish_pypi.yml
docs/: conf.py  index.rst  requirements.txt
tests/: test_build.py
utl_sphinx_theme/: .layout.html.un~  __init__.py  layout.html  layout.html~  theme.conf  theme.toml
utl_sphinx_theme/static/: utl_sphinx_theme.css
